[gd_scene load_steps=21 format=3 uid="uid://bhfisvccwil76"]

[ext_resource type="TileSet" uid="uid://cxnvxncv43seq" path="res://tilesets/tileset.tres" id="1_p6xl5"]
[ext_resource type="PackedScene" uid="uid://d1yogmjhyl232" path="res://scenes/player.tscn" id="2_4622k"]
[ext_resource type="PackedScene" uid="uid://dyp38iq02ywhy" path="res://scenes/mobs/spider.tscn" id="3_4ahb7"]
[ext_resource type="Theme" uid="uid://cpxca4qeaggbs" path="res://ui_theme.tres" id="4_gtotw"]
[ext_resource type="Texture2D" uid="uid://cosuivmj0r3i8" path="res://sprites/ui_sprites/player_faces/headshot.png" id="5_0hac8"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="5_tl30w"]
[ext_resource type="Texture2D" uid="uid://de2pddjm5w0n" path="res://cursors/wait_cursor_sheet.png" id="5_wjcs7"]
[ext_resource type="Script" path="res://scripts/cursor.gd" id="6_hi3wt"]
[ext_resource type="Texture2D" uid="uid://d074k1gfoi32w" path="res://sprites/ui_sprites/bullets/9mm.png" id="7_sd7qy"]
[ext_resource type="Texture2D" uid="uid://bvsrldv8i0n5g" path="res://sprites/ui_sprites/guns/pistol.png" id="8_qkjni"]
[ext_resource type="Texture2D" uid="uid://bqlfpgkhe6tqm" path="res://sprites/ui_sprites/mag.png" id="11_0j3y0"]
[ext_resource type="Texture2D" uid="uid://bf2sdtn2dm2je" path="res://sprites/ui_sprites/health.png" id="11_key6g"]
[ext_resource type="Texture2D" uid="uid://d0satjrrcn5u3" path="res://sprites/ui_sprites/shield.png" id="12_fjobt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iw2ae"]
atlas = ExtResource("5_wjcs7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0opm"]
atlas = ExtResource("5_wjcs7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vw2p"]
atlas = ExtResource("5_wjcs7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfeto"]
atlas = ExtResource("5_wjcs7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3ald"]
atlas = ExtResource("5_wjcs7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tn4i4"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_iw2ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0opm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vw2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3ald")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sg5bv"]
content_margin_left = 20.0
content_margin_top = 5.0
content_margin_right = 20.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 1)

[node name="Game" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
tile_set = ExtResource("1_p6xl5")
format = 2
layer_0/tile_data = PackedInt32Array(0, 720896, 4, 65536, 720896, 4, 131072, 720896, 4, 196608, 720896, 4, 262144, 720896, 4, 327680, 720896, 4, 393216, 720896, 4, 458752, 720896, 4, 524288, 720896, 4, 589824, 720896, 4, 655360, 720896, 4, 720896, 720896, 4, 1, 720896, 4, 65537, 327680, 0, 131073, 393216, 0, 196609, 327680, 0, 262145, 393216, 1, 327681, 327680, 1, 393217, 720896, 4, 458753, 327680, 1, 524289, 327680, 0, 589825, 327680, 1, 655361, 393216, 0, 720897, 720896, 4, 2, 720896, 4, 65538, 327680, 1, 131074, 327680, 0, 196610, 327680, 1, 262146, 327680, 0, 327682, 393216, 0, 393218, 720896, 4, 458754, 393216, 1, 524290, 720896, 4, 589826, 327680, 0, 655362, 327680, 0, 720898, 720896, 4, 3, 720896, 4, 65539, 327680, 0, 131075, 393216, 0, 196611, 393216, 1, 262147, 327680, 0, 327683, 393216, 0, 393219, 720896, 4, 458755, 327680, 0, 524291, 327680, 1, 589827, 720896, 4, 655363, 393216, 1, 720899, 720896, 4, 4, 720896, 4, 65540, 720896, 4, 131076, 720896, 4, 196612, 720896, 4, 262148, 327680, 1, 327684, 327680, 0, 393220, 720896, 4, 458756, 393216, 1, 524292, 327680, 1, 589828, 720896, 4, 655364, 393216, 0, 720900, 720896, 4, 5, 720896, 4, 65541, 327680, 1, 131077, 327680, 1, 196613, 327680, 1, 262149, 393216, 1, 327685, 327680, 0, 393221, 720896, 4, 458757, 327680, 0, 524293, 327680, 1, 589829, 720896, 4, 655365, 393216, 0, 720901, 720896, 4, 6, 720896, 4, 65542, 327680, 0, 131078, 393216, 1, 196614, 393216, 1, 262150, 393216, 1, 327686, 393216, 1, 393222, 393216, 0, 458758, 327680, 1, 524294, 393216, 0, 589830, 720896, 4, 655366, 393216, 1, 720902, 720896, 4, 7, 720896, 4, 65543, 327680, 0, 131079, 327680, 1, 196615, 393216, 0, 262151, 327680, 0, 327687, 393216, 0, 393223, 393216, 0, 458759, 327680, 1, 524295, 393216, 1, 589831, 327680, 1, 655367, 327680, 1, 720903, 720896, 4, 8, 720896, 4, 65544, 327680, 0, 131080, 393216, 0, 196616, 393216, 1, 262152, 393216, 0, 327688, 327680, 1, 393224, 327680, 1, 458760, 327680, 0, 524296, 327680, 0, 589832, 393216, 0, 655368, 393216, 1, 720904, 720896, 4, 9, 720896, 4, 65545, 720896, 4, 131081, 720896, 4, 196617, 720896, 4, 262153, 720896, 4, 327689, 720896, 4, 393225, 720896, 4, 458761, 720896, 4, 524297, 720896, 4, 589833, 720896, 4, 655369, 327680, 0, 720905, 720896, 4, 10, 720896, 4, 65546, 327680, 0, 131082, 327680, 1, 196618, 327680, 0, 262154, 327680, 0, 327690, 327680, 0, 393226, 393216, 0, 458762, 393216, 1, 524298, 393216, 0, 589834, 393216, 1, 655370, 393216, 0, 720906, 720896, 4, 11, 720896, 4, 65547, 393216, 1, 131083, 393216, 0, 196619, 393216, 0, 262155, 393216, 0, 327691, 327680, 1, 393227, 393216, 0, 458763, 393216, 0, 524299, 327680, 1, 589835, 393216, 0, 655371, 393216, 0, 720907, 720896, 4, 12, 720896, 4, 65548, 327680, 0, 131084, 327680, 1, 196620, 393216, 1, 262156, 720896, 4, 327692, 720896, 4, 393228, 720896, 4, 458764, 720896, 4, 524300, 720896, 4, 589836, 720896, 4, 655372, 720896, 4, 720908, 720896, 4, 13, 720896, 4, 65549, 393216, 1, 131085, 393216, 1, 196621, 393216, 0, 262157, 327680, 1, 327693, 393216, 1, 393229, 393216, 1, 458765, 327680, 0, 524301, 327680, 1, 589837, 393216, 1, 655373, 393216, 0, 720909, 720896, 4, 14, 720896, 4, 65550, 393216, 0, 131086, 393216, 1, 196622, 327680, 1, 262158, 327680, 0, 327694, 327680, 1, 393230, 327680, 0, 458766, 327680, 0, 524302, 327680, 1, 589838, 393216, 1, 655374, 393216, 0, 720910, 720896, 4, 15, 720896, 4, 65551, 327680, 0, 131087, 393216, 0, 196623, 393216, 1, 262159, 393216, 1, 327695, 327680, 1, 393231, 327680, 1, 458767, 327680, 1, 524303, 327680, 1, 589839, 393216, 0, 655375, 327680, 0, 720911, 720896, 4, 16, 720896, 4, 65552, 327680, 0, 131088, 393216, 0, 196624, 327680, 0, 262160, 393216, 1, 327696, 393216, 0, 393232, 327680, 1, 458768, 327680, 1, 524304, 327680, 1, 589840, 327680, 0, 655376, 327680, 1, 720912, 720896, 4, 17, 720896, 4, 65553, 720896, 4, 131089, 720896, 4, 196625, 720896, 4, 262161, 720896, 4, 327697, 720896, 4, 393233, 720896, 4, 458769, 720896, 4, 524305, 720896, 4, 589841, 720896, 4, 655377, 720896, 4, 720913, 720896, 4)

[node name="Spider" parent="." instance=ExtResource("3_4ahb7")]
position = Vector2(88, 88)

[node name="Spider2" parent="." instance=ExtResource("3_4ahb7")]
position = Vector2(168, 72)

[node name="Spider3" parent="." instance=ExtResource("3_4ahb7")]
position = Vector2(120, 48)

[node name="Spider4" parent="." instance=ExtResource("3_4ahb7")]
position = Vector2(120, 120)

[node name="Player" parent="." instance=ExtResource("2_4622k")]
unique_name_in_owner = true
position = Vector2(24, 24)

[node name="WaitCursorSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-48, 42)
sprite_frames = SubResource("SpriteFrames_tn4i4")
autoplay = "default"

[node name="CursorScript" type="Node" parent="."]
script = ExtResource("6_hi3wt")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_tl30w")

[node name="MainPanel" type="PanelContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -128.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="UI/MainPanel"]
layout_mode = 2
color = Color(0.333333, 0.164706, 0.0980392, 0.631373)

[node name="FacePanel" type="PanelContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4

[node name="RedBackground" type="ColorRect" parent="UI/FacePanel"]
layout_mode = 2
color = Color(0.87451, 0.105882, 0.0666667, 1)

[node name="FaceBackground" type="ColorRect" parent="UI/FacePanel"]
layout_mode = 2

[node name="FaceTexture" type="TextureRect" parent="UI/FacePanel/FaceBackground"]
texture_filter = 1
texture_repeat = 1
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_0hac8")
expand_mode = 2
stretch_mode = 5

[node name="PlayerStats" type="GridContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -433.0
offset_top = -118.0
offset_right = -304.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/h_separation = 8
columns = 2

[node name="HealthIcon" type="TextureRect" parent="UI/PlayerStats"]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("11_key6g")
expand_mode = 5
stretch_mode = 5

[node name="PlayerHealth" type="Label" parent="UI/PlayerStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "50"

[node name="ShieldIcon" type="TextureRect" parent="UI/PlayerStats"]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("12_fjobt")
expand_mode = 5
stretch_mode = 5

[node name="PlayerShield" type="Label" parent="UI/PlayerStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "10%"

[node name="GunStats" type="GridContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -714.0
offset_top = -118.0
offset_right = -585.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/h_separation = 8
columns = 2

[node name="MagIcon" type="TextureRect" parent="UI/GunStats"]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("11_0j3y0")
expand_mode = 5
stretch_mode = 5

[node name="GunMags" type="Label" parent="UI/GunStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "3"

[node name="MagRIcon" type="TextureRect" parent="UI/GunStats"]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("7_sd7qy")
expand_mode = 5
stretch_mode = 5

[node name="GunMagR" type="Label" parent="UI/GunStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "3/8"

[node name="OutsideUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 640.0

[node name="ObjectiveContainer" type="TabContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -159.0
grow_horizontal = 0
grow_vertical = 0

[node name="Current Objective" type="RichTextLabel" parent="UI/ObjectiveContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[b]Kill them [i]all...[/i][/b]"

[node name="ItemsContainer" type="TabContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -160.0
offset_right = 300.0
offset_bottom = -1.0
grow_vertical = 0
size_flags_vertical = 4
current_tab = 1

[node name="Weapon" type="PanelContainer" parent="UI/ItemsContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sg5bv")

[node name="GunTexture" type="TextureRect" parent="UI/ItemsContainer/Weapon"]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(96, 48)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("8_qkjni")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ItemsContainer/Weapon"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="GunName" type="Label" parent="UI/ItemsContainer/Weapon/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "L&S Shortarm 7+1 Round"

[node name="GunDamage" type="Label" parent="UI/ItemsContainer/Weapon/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Damage Multiplier: 0.5x"

[node name="GunFireRate" type="Label" parent="UI/ItemsContainer/Weapon/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Shots per Burst: 1"

[node name="GunBurstCount" type="Label" parent="UI/ItemsContainer/Weapon/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Bursts per Trigger Pull: 1"

[node name="Ammo" type="PanelContainer" parent="UI/ItemsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sg5bv")

[node name="AmmoTexture" type="TextureRect" parent="UI/ItemsContainer/Ammo"]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(96, 48)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("7_sd7qy")
expand_mode = 5
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ItemsContainer/Ammo"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="AmmoName" type="Label" parent="UI/ItemsContainer/Ammo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "9x9mm Parabellum"

[node name="AmmoDamage" type="Label" parent="UI/ItemsContainer/Ammo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Damage: 10hp"

[node name="AmmoPenetrates" type="Label" parent="UI/ItemsContainer/Ammo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Non-Penetrative"

[node name="AmmoBounces" type="Label" parent="UI/ItemsContainer/Ammo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Non-Bouncing
"

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 0.290196)

[node name="Label" type="Label" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = -33.5
offset_right = 102.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_gtotw")
theme_override_font_sizes/font_size = 48
text = "You Died"

[connection signal="mouse_entered" from="UI/OutsideUI" to="UI" method="ui_mouse_exited"]
[connection signal="mouse_exited" from="UI/OutsideUI" to="UI" method="ui_mouse_entered"]
[connection signal="tab_hovered" from="UI/ObjectiveContainer" to="UI" method="_on_tab_hovered"]
[connection signal="tab_hovered" from="UI/ItemsContainer" to="UI" method="_on_tab_hovered"]
